<resources>
    <string name="app_name">Life Counter</string>
    <string name="instruction">Select a player and count their life!</string>
    <string name="puls5">+5</string>
    <string name="plus1">+</string>
    <string name="minus">-</string>
    <string name="minus5">-5</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
</resources>
