<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/instruction" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent" android:text="@string/instruction" android:textSize="20sp"
            android:textAlignment="viewStart" app:layout_constraintVertical_bias="0.0"/>
    <TableLayout
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:id="@+id/table"
            android:layout_marginTop="8dp" android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="true">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/player_1" android:gravity="center"
                android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/player_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1"
                    tools:text="Player 1" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginEnd="200dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player1_life"
                    android:textAlignment="textEnd" android:textSize="25sp" android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/player_2"
                android:gravity="center" android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/player_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player2"
                    tools:text="Player 2" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginEnd="200dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player2_life"
                    android:textAlignment="textEnd" android:textSize="25sp" android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/player_3"
                android:gravity="center" android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/player_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player3"
                    tools:text="Player 3" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginEnd="200dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player3_life"
                    android:textAlignment="textEnd" android:textSize="25sp" android:textColor="@color/textColor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/player_4" android:gravity="center" android:layout_marginBottom="8dp">
            <TextView
                    android:text="@string/player_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/player4"
                    tools:text="Player 4" android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:layout_marginEnd="200dp" android:textSize="20sp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/player4_life"
                    android:textAlignment="textEnd" android:textSize="25sp" android:textColor="@color/textColor"/>
        </TableRow>
    </TableLayout>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="50dp" android:id="@+id/guideline"/>
    <Spinner
            android:id="@+id/playerSelector"
            android:spinnerMode="dropdown"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/instruction"
            android:layout_width="260dp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="392dp"
            android:layout_height="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:gravity="center" android:clipToPadding="false"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:id="@+id/linearLayout" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/playerSelector">
        <Button
                android:text="@string/puls5"
                android:layout_width="57dp"
                tools:layout_editor_absoluteY="43dp"
                tools:layout_editor_absoluteX="33dp" android:id="@+id/plus5"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Button.Colored" android:textColor="@android:color/white"
                android:textSize="20sp" android:layout_marginEnd="10dp" android:layout_height="57dp"/>
        <Button
                android:text="@string/plus1"
                android:layout_width="57dp"
                tools:layout_editor_absoluteY="50dp"
                tools:layout_editor_absoluteX="116dp" android:id="@+id/plus" android:layout_height="57dp"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Button.Colored" android:textColor="@android:color/white"
                android:textSize="20sp" android:layout_marginEnd="10dp"/>
        <Button
                android:text="@string/minus"
                android:layout_width="57dp"
                tools:layout_editor_absoluteY="50dp"
                tools:layout_editor_absoluteX="304dp" android:id="@+id/minus" android:layout_height="57dp"
                android:textAlignment="center"
                style="@style/Widget.AppCompat.Button.Colored" android:textColor="@android:color/white"
                android:textSize="20sp" android:layout_marginEnd="10dp"/>
        <Button
                android:text="@string/minus5"
                android:layout_width="57dp"
                tools:layout_editor_absoluteY="50dp"
                tools:layout_editor_absoluteX="203dp" android:id="@+id/minus5" android:layout_height="57dp"
                android:textAlignment="center" style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white" android:textSize="20sp"/>
    </LinearLayout>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="vertical"/>
    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/loseLabel"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="20dp" android:textSize="20sp"
            android:textColor="@color/textColor" android:textStyle="bold" android:background="@android:color/white"
            android:visibility="invisible" android:textAlignment="center" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"/>


</android.support.constraint.ConstraintLayout>